test/libhyperion/syntaxTests/pragma/experimental_hyperion_out_of_order_2.hyp
function f() pure returns (uint)
{
    return 1;
}

pragma experimental hyperion;

struct A
{
    uint256 x;
}
// ----
// ParserError 8185: (83-89): Experimental pragma "hyperion" can only be set at the beginning of the source unit.
